--- a/LibraryManagementSystem/LibraryManagementSystem.csproj
+++ b/LibraryManagementSystem/LibraryManagementSystem.csproj
@@ -87,6 +87,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>logindbDataSet.xsd</DependentUpon>
     </Compile>
+    <Compile Include="logindbDataSet1.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>logindbDataSet1.xsd</DependentUpon>
+    </Compile>
     <Compile Include="RegisterationForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -181,6 +186,17 @@
     </None>
     <None Include="logindbDataSet.xss">
       <DependentUpon>logindbDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="logindbDataSet1.xsc">
+      <DependentUpon>logindbDataSet1.xsd</DependentUpon>
+    </None>
+    <None Include="logindbDataSet1.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>logindbDataSet1.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="logindbDataSet1.xss">
+      <DependentUpon>logindbDataSet1.xsd</DependentUpon>
     </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
